melParse/melParser.java
// Generated from mel.g4 by ANTLR 4.5.1
package melParse;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class melParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, FN=2, END=3, IF=4, THEN=5, ELSE=6, TRUE=7, FALSE=8, STRING=9, 
		INTEGER=10, BOOLEAN=11, PRINT=12, LENGTH=13, RETURN=14, VAR=15, WHILE=16, 
		ARRAY=17, OF=18, BREAK=19, CONTINUE=20, LB=21, RB=22, LP=23, RP=24, LS=25, 
		RS=26, SEMI=27, COLON=28, COMMA=29, EQ=30, ASSIGN=31, NEQ=32, TIMES=33, 
		PLUS=34, MINUS=35, DOT=36, BANG=37, LT=38, LTE=39, GT=40, GTE=41, AND=42, 
		OR=43, INTLIT=44, ID=45, STRINGLIT=46, WS=47, CEOL=48;
	public static final int
		RULE_compUnit = 0, RULE_funcDecl = 1, RULE_mainDecl = 2, RULE_formals = 3, 
		RULE_idType = 4, RULE_type = 5, RULE_simpleType = 6, RULE_statement = 7, 
		RULE_expression = 8, RULE_exps = 9;
	public static final String[] ruleNames = {
		"compUnit", "funcDecl", "mainDecl", "formals", "idType", "type", "simpleType", 
		"statement", "expression", "exps"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'main'", "'fn'", "'end'", "'if'", "'then'", "'else'", "'true'", 
		"'false'", "'string'", "'integer'", "'boolean'", "'print'", "'length'", 
		"'return'", "'var'", "'while'", "'array'", "'of'", "'break'", "'continue'", 
		"'{'", "'}'", "'('", "')'", "'['", "']'", "';'", "':'", "','", "'='", 
		"'<-'", "'!='", "'*'", "'+'", "'-'", "'.'", "'!'", "'<'", "'<='", "'>'", 
		"'>='", "'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "MAIN", "FN", "END", "IF", "THEN", "ELSE", "TRUE", "FALSE", "STRING", 
		"INTEGER", "BOOLEAN", "PRINT", "LENGTH", "RETURN", "VAR", "WHILE", "ARRAY", 
		"OF", "BREAK", "CONTINUE", "LB", "RB", "LP", "RP", "LS", "RS", "SEMI", 
		"COLON", "COMMA", "EQ", "ASSIGN", "NEQ", "TIMES", "PLUS", "MINUS", "DOT", 
		"BANG", "LT", "LTE", "GT", "GTE", "AND", "OR", "INTLIT", "ID", "STRINGLIT", 
		"WS", "CEOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mel.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public melParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompUnitContext extends ParserRuleContext {
		public MainDeclContext mainDecl() {
			return getRuleContext(MainDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(melParser.EOF, 0); }
		public List<FuncDeclContext> funcDecl() {
			return getRuleContexts(FuncDeclContext.class);
		}
		public FuncDeclContext funcDecl(int i) {
			return getRuleContext(FuncDeclContext.class,i);
		}
		public CompUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterCompUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitCompUnit(this);
		}
	}

	public final CompUnitContext compUnit() throws RecognitionException {
		CompUnitContext _localctx = new CompUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compUnit);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(20);
					funcDecl();
					}
					} 
				}
				setState(25);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(26);
			mainDecl();
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(melParser.ID, 0); }
		public FormalsContext formals() {
			return getRuleContext(FormalsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FuncDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterFuncDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitFuncDecl(this);
		}
	}

	public final FuncDeclContext funcDecl() throws RecognitionException {
		FuncDeclContext _localctx = new FuncDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(FN);
			setState(30);
			match(ID);
			setState(31);
			match(LP);
			setState(32);
			formals();
			setState(33);
			match(RP);
			setState(34);
			match(COLON);
			setState(35);
			type();
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << PRINT) | (1L << RETURN) | (1L << VAR) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << LP) | (1L << BANG) | (1L << INTLIT) | (1L << ID) | (1L << STRINGLIT))) != 0)) {
				{
				{
				setState(36);
				statement();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(melParser.ID, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterMainDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitMainDecl(this);
		}
	}

	public final MainDeclContext mainDecl() throws RecognitionException {
		MainDeclContext _localctx = new MainDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(FN);
			setState(45);
			match(MAIN);
			setState(46);
			match(LP);
			setState(47);
			match(ID);
			setState(48);
			match(COLON);
			setState(49);
			match(ARRAY);
			setState(50);
			match(LS);
			setState(51);
			match(RS);
			setState(52);
			match(OF);
			setState(53);
			match(STRING);
			setState(54);
			match(RP);
			setState(55);
			match(COLON);
			setState(56);
			match(INTEGER);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << PRINT) | (1L << RETURN) | (1L << VAR) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << LP) | (1L << BANG) | (1L << INTLIT) | (1L << ID) | (1L << STRINGLIT))) != 0)) {
				{
				{
				setState(57);
				statement();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalsContext extends ParserRuleContext {
		public List<IdTypeContext> idType() {
			return getRuleContexts(IdTypeContext.class);
		}
		public IdTypeContext idType(int i) {
			return getRuleContext(IdTypeContext.class,i);
		}
		public FormalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterFormals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitFormals(this);
		}
	}

	public final FormalsContext formals() throws RecognitionException {
		FormalsContext _localctx = new FormalsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(65);
				idType();
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(66);
					match(COMMA);
					setState(67);
					idType();
					}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdTypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(melParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterIdType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitIdType(this);
		}
	}

	public final IdTypeContext idType() throws RecognitionException {
		IdTypeContext _localctx = new IdTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_idType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(ID);
			setState(76);
			match(COLON);
			setState(77);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayTypeContext extends TypeContext {
		public TerminalNode ARRAY() { return getToken(melParser.ARRAY, 0); }
		public TerminalNode OF() { return getToken(melParser.OF, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArrayTypeContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterArrayType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitArrayType(this);
		}
	}
	public static class SimpleTypeDeclContext extends TypeContext {
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public SimpleTypeDeclContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterSimpleTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitSimpleTypeDecl(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			setState(88);
			switch (_input.LA(1)) {
			case STRING:
			case INTEGER:
			case BOOLEAN:
				_localctx = new SimpleTypeDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				simpleType();
				}
				break;
			case ARRAY:
				_localctx = new ArrayTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				match(ARRAY);
				setState(81);
				match(LS);
				setState(83);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LP) | (1L << BANG) | (1L << INTLIT) | (1L << ID) | (1L << STRINGLIT))) != 0)) {
					{
					setState(82);
					expression(0);
					}
				}

				setState(85);
				match(RS);
				setState(86);
				match(OF);
				setState(87);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleTypeContext extends ParserRuleContext {
		public SimpleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleType; }
	 
		public SimpleTypeContext() { }
		public void copyFrom(SimpleTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntegerTypeContext extends SimpleTypeContext {
		public TerminalNode INTEGER() { return getToken(melParser.INTEGER, 0); }
		public IntegerTypeContext(SimpleTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterIntegerType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitIntegerType(this);
		}
	}
	public static class StringTypeContext extends SimpleTypeContext {
		public TerminalNode STRING() { return getToken(melParser.STRING, 0); }
		public StringTypeContext(SimpleTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterStringType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitStringType(this);
		}
	}
	public static class BooleanTypeContext extends SimpleTypeContext {
		public TerminalNode BOOLEAN() { return getToken(melParser.BOOLEAN, 0); }
		public BooleanTypeContext(SimpleTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterBooleanType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitBooleanType(this);
		}
	}

	public final SimpleTypeContext simpleType() throws RecognitionException {
		SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simpleType);
		try {
			setState(93);
			switch (_input.LA(1)) {
			case STRING:
				_localctx = new StringTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(STRING);
				}
				break;
			case INTEGER:
				_localctx = new IntegerTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(INTEGER);
				}
				break;
			case BOOLEAN:
				_localctx = new BooleanTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				match(BOOLEAN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarStmntContext extends StatementContext {
		public IdTypeContext idType() {
			return getRuleContext(IdTypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterVarStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitVarStmnt(this);
		}
	}
	public static class IfStmntContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterIfStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitIfStmnt(this);
		}
	}
	public static class BreakStmntContext extends StatementContext {
		public BreakStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterBreakStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitBreakStmnt(this);
		}
	}
	public static class ExpressionStmntContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterExpressionStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitExpressionStmnt(this);
		}
	}
	public static class AssignStmntContext extends StatementContext {
		public TerminalNode ID() { return getToken(melParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterAssignStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitAssignStmnt(this);
		}
	}
	public static class PrintStmntContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterPrintStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitPrintStmnt(this);
		}
	}
	public static class ArrayAssignContext extends StatementContext {
		public TerminalNode ID() { return getToken(melParser.ID, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArrayAssignContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterArrayAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitArrayAssign(this);
		}
	}
	public static class ContinueStmntContext extends StatementContext {
		public ContinueStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterContinueStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitContinueStmnt(this);
		}
	}
	public static class ReturnStmntContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterReturnStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitReturnStmnt(this);
		}
	}
	public static class WhileStmntContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public WhileStmntContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).enterWhileStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof melListener ) ((melListener)listener).exitWhileStmnt(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		int _la;
		try {
			setState(165);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				_localctx = new VarStmntContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(VAR);
				setState(96);
				idType();
				setState(99);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(97);
					match(ASSIGN);
					setState(98);
					expression(0);
					}
				}

				setState(101);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new IfStmntContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(IF);
				setState(104);
				expression(0);
				setState(105);
				match(THEN);
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << PRINT) | (1L << RETURN) | (1L << VAR) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << LP) | (1L << BANG) | (1L << INTLIT) | (1L << ID) | (1L << STRINGLIT))) != 0)) {
					{
					{
					setState(106);
					statement();
					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(119);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(112);
					match(ELSE);
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << PRINT) | (1L << RETURN) | (1L << VAR) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << LP) | (1L << BANG) | (1L << INTLIT) | (1L << ID) | (1L << STRINGLIT))) != 0)) {
						{
						{
						setState(113);
						statement();
						}
						}
						setState(118);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(121);
				match(END);
				}
				break;
			case 3:
				_localctx = new WhileStmntContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				match(WHILE);
				setState(124);
				expression(0);
				setState(125);
				match(THEN);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << PRINT) | (1L << RETURN) | (1L << VAR) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << LP) | (1L << BANG) | (1L << INTLIT) | (1L << ID) | (1L << STRINGLIT))) != 0)) {
					{
					{
					setState(126);
					statement();
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(132);
				match(END);
				}
				break;
			case 4:
				_localctx = new PrintStmntContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				match(PRINT);
				setState(135);
				match(LP);
				setState(136);
				expression(0);
				setState(137);
				match(RP);
				setState(138);
				match(SEMI);
				}
				break;
			case 5:
				_localctx = new ArrayAssignContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				match(ID);
				setState(141);
				match(LS);
				setState(142);
				expression(0);
				setState(143);
				match(RS);
				setState(144);
				match(ASSIGN);
				setState(145);
				expression(0);
				setState(146);
				match(SEMI);
				}
				break;
			case 6:
				_localctx = new AssignStmntContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(148);
				match(ID);
				setState(149);
				match(ASSIGN);
				setState(150);
				expression(0);
				setState(151);
				match(SEMI);
				}
				break;
			case 7:
				_localctx = new ExpressionStmntContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(153);
				expression(0);
				setState(154);
				match(SEMI);
				}
				break;
			case 8:
				_localctx = new ReturnStmntContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(156);
				match(RETURN);
				setState(158);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << LP) | (1L << BANG) | (1L << INTLIT) | (1L << ID) | (1L << STRINGLIT))) != 0)) {
					{
					setState(157);
					expression(0);
					}
				}
